# gigabyte-dbus

./: Cargo.toml  Makefile  README.md  client.py  gigabyted.conf  gigabyted.rules  gigabyted.service  gigabyted.sysusers  interface.py  interface.xml  main.py  requirements.txt
gigabyted/: Cargo.toml
pkg/: PKGBUILD  gigabyte-dbus.spec
src/: main.rs  platform.rs  testing.rs
