[package]
name = "gigabyted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "testd"
path = "src/testing.rs"

[dependencies]
zbus = "3.12.0"
udev = "^0.7.0"

[dependencies.async-std]
version = "*"
features = ["attributes"]